[gd_scene load_steps=6 format=3 uid="uid://d1vhc1hdi8gue"]

[ext_resource type="Script" path="res://letters/letter.gd" id="1_75yn3"]
[ext_resource type="Texture2D" uid="uid://b477pd6r07cw8" path="res://letters/sprites/letters_alphabet.png" id="2_kuuv5"]
[ext_resource type="Texture2D" uid="uid://l3teu51rx8ki" path="res://letters/sprites/letters_eyes.png" id="3_xix3p"]
[ext_resource type="Texture2D" uid="uid://8pwd1puvppkv" path="res://letters/sprites/hand.png" id="4_fk602"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6icrl"]
size = Vector2(32, 64)

[node name="letter" type="Area2D"]
script = ExtResource("1_75yn3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_6icrl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -48.0
offset_right = 16.0
offset_bottom = -16.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 30.0
offset_bottom = 30.0
mouse_filter = 2
color = Color(0.933333, 0.729412, 0.45098, 1)

[node name="character_label" type="Label" parent="."]
offset_left = -5.0
offset_top = -54.0
offset_right = 6.0
offset_bottom = -28.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
text = "A"
horizontal_alignment = 1
vertical_alignment = 2

[node name="attack_label" type="Label" parent="."]
offset_left = -15.0
offset_top = -36.0
offset_right = -5.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_font_sizes/font_size = 16
text = "9"
horizontal_alignment = 1

[node name="health_label" type="Label" parent="."]
offset_left = 6.0
offset_top = -36.0
offset_right = 16.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_font_sizes/font_size = 16
text = "9"
horizontal_alignment = 1

[node name="letter_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_kuuv5")
hframes = 26

[node name="hand" type="Sprite2D" parent="letter_sprite"]
visible = false
position = Vector2(-14, 4)
texture = ExtResource("4_fk602")

[node name="eye_sprite" type="Sprite2D" parent="letter_sprite"]
texture = ExtResource("3_xix3p")
hframes = 7
frame = 5

[node name="frozen_rect" type="ColorRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
color = Color(0, 1, 1, 0.34902)

[node name="frozen_particles" type="CPUParticles2D" parent="frozen_rect"]
z_index = -1
position = Vector2(16, 16)
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(18, 18)
gravity = Vector2(0, 0)
scale_amount_min = 4.0
scale_amount_max = 4.0

[node name="click_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="focus_shake" type="Timer" parent="."]
wait_time = 0.4

[node name="sprite_animation_timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="click_timer" to="." method="_on_click_timer_timeout"]
[connection signal="timeout" from="focus_shake" to="." method="_on_focus_shake_timeout"]
[connection signal="timeout" from="sprite_animation_timer" to="." method="_on_sprite_animation_timer_timeout"]
